--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,3 +18,7 @@ body::-webkit-scrollbar-thumb {
     border-radius: 4px;
     outline: none;
 }
+
+.accordion-button:focus {
+    box-shadow: none;
+}
